--- a/.github/workflows/firefox-ios-ui-tests.yml
+++ b/.github/workflows/firefox-ios-ui-tests.yml
@@ -41,7 +41,7 @@ jobs:
                   -target ${{ env.xcodebuild_target }} \
                   -derivedDataPath ~/DerivedData \
                   -destination 'platform=iOS Simulator,name=${{ env.ios_simulator_default }},OS=${{ env.ios_version }}' \
-                  COMPILER_INDEX_STORE_ENABLE=NO CODE_SIGN_IDENTITY= CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
+                  COMPILER_INDEX_STORE_ENABLE=NO CODE_SIGN_IDENTITY= CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO ARCHS="arm64"
               working-directory: ${{ env.browser }}
             - name: Compress Derived Data
               id: compress-dd
@@ -233,7 +233,7 @@ jobs:
       strategy:
         fail-fast: false
         matrix:
-          ios_simulator: ['iPhone 15 Pro Max', 'iPad Pro (11-inch) (4th generation)']
+          ios_simulator: ['iPhone 15 Pro Max']
       steps:
         - name: Check out source code
           uses: actions/checkout@v4.1.7
