--- a/.github/workflows/firefox-ios-ui-tests.yml
+++ b/.github/workflows/firefox-ios-ui-tests.yml
@@ -287,6 +287,9 @@ jobs:
         - name: Run tests
           id: run-tests
           run: |
+            xcrun simctl shutdown all
+            xcrun simctl erase all
+            xcrun simctl boot '${{ matrix.ios_simulator }}'
             xcodebuild \
               test-without-building \
               -scheme ${{ env.xcodebuild_scheme }} \
