Ensure parts of the app is visible :-/

--- a/.github/workflows/firefox-ios-ui-tests.yml
+++ b/.github/workflows/firefox-ios-ui-tests.yml
@@ -114,9 +114,6 @@ jobs:
       - name: Run Smoketest1
         id: run-smoketest1
         run: |
-          xcrun simctl shutdown all
-          xcrun simctl erase all
-          xcrun simctl boot '${{ matrix.ios_simulator }}'
           xcodebuild \
             test-without-building \
             -scheme ${{ env.xcodebuild_scheme }} \
@@ -131,9 +128,6 @@ jobs:
       - name: Run Smoketest2
         id: run-smoketest2
         run: |
-          xcrun simctl shutdown all
-          xcrun simctl erase all
-          xcrun simctl boot '${{ matrix.ios_simulator }}'
           xcodebuild \
             test-without-building \
             -scheme ${{ env.xcodebuild_scheme }} \
@@ -148,9 +142,6 @@ jobs:
       - name: Run Smoketest3
         id: run-smoketest3
         run: |
-          xcrun simctl shutdown all
-          xcrun simctl erase all
-          xcrun simctl boot '${{ matrix.ios_simulator }}'
           xcodebuild \
             test-without-building \
             -scheme ${{ env.xcodebuild_scheme }} \
@@ -165,9 +156,6 @@ jobs:
       - name: Run Smoketest4
         id: run-smoketest4
         run: |
-          xcrun simctl shutdown all
-          xcrun simctl erase all
-          xcrun simctl boot '${{ matrix.ios_simulator }}'
           xcodebuild \
             test-without-building \
             -scheme ${{ env.xcodebuild_scheme }} \
@@ -202,13 +190,14 @@ jobs:
           python ../test-fixtures/ci/convert_junit_to_markdown.py --smoke --github --${{ env.browser }} ./combined.xml ./github.md
           cat github.md >> $GITHUB_STEP_SUMMARY
           python ../test-fixtures/ci/convert_junit_to_markdown.py --smoke --slack --${{ env.browser }} ./combined.xml ./slack.json
+          mv ./combined junit-smoketests-${{ matrix.ios_simulator }}-`date +"%Y-%m-%d"`.xml
         working-directory:  ${{ env.browser }}
       - name: Upload junit files
         id: upload-junit
         uses: actions/upload-artifact@v4.3.3
         with:
           name: ${{ env.browser }}-smoketests-${{ matrix.ios_simulator }}-junit-${{ github.run_number }}
-          path: ${{ env.browser }}/junit-*.xml
+          path: ${{ env.browser }}/junit-smoketests-*.xml
           retention-days: 90
       - name: Upload log file
         id: upload-log
@@ -307,6 +296,7 @@ jobs:
             python ../test-fixtures/ci/convert_junit_to_markdown.py --github --${{ env.browser }} ./build/reports/junit.xml ./github.md
             cat github.md >> $GITHUB_STEP_SUMMARY
             python ../test-fixtures/ci/convert_junit_to_markdown.py --slack --${{ env.browser }} ./build/reports/junit.xml ./slack.json
+            mv ./build/reports/junit.xml junit-fullfunctional-${{ matrix.ios_simulator }}-`date +"%Y-%m-%d"`.xml
           working-directory:  ${{ env.browser }}
         - name: Upload junit files
           id: upload-junit
