--- a/firefox-ios/nimbus-features/onboardingFrameworkFeature.yaml
+++ b/firefox-ios/nimbus-features/onboardingFrameworkFeature.yaml
@@ -146,6 +146,49 @@ features:
               onboarding-type: fresh-install
               prerequisites:
                 - ALWAYS
+            customization-theme:
+              card-type: multiple-choice
+              order: 40
+              title: Onboarding/Onboarding.Customization.Theme.Title.v123
+              body: Onboarding/Onboarding.Customization.Theme.Description.v123
+              image: themeing
+              buttons:
+                primary:
+                  title: Onboarding/Onboarding.Customization.Theme.Continue.Action.v123
+                  action: forward-one-card
+              multiple-choice-buttons:
+                - title: Onboarding/Onboarding.Customization.Theme.System.Action.v123
+                  image: theme-system
+                  action: theme-system-default
+                - title: Onboarding/Onboarding.Customization.Theme.Light.Action.v123
+                  image: theme-light
+                  action: theme-light
+                - title: Onboarding/Onboarding.Customization.Theme.Dark.Action.v123
+                  image: theme-dark
+                  action: theme-dark
+              onboarding-type: fresh-install
+              prerequisites:
+                - ALWAYS
+            customization-toolbar:
+              card-type: multiple-choice
+              order: 41
+              title: Onboarding/Onboarding.Customization.Toolbar.Title.v123
+              body: Onboarding/Onboarding.Customization.Toolbar.Description.v123
+              image: toolbar
+              buttons:
+                primary:
+                  title: Onboarding/Onboarding.Customization.Toolbar.Continue.Action.v123
+                  action: forward-one-card
+              multiple-choice-buttons:
+                - title: Onboarding/Onboarding.Customization.Toolbar.Top.Action.v123
+                  image: toolbar-top
+                  action: toolbar-top
+                - title: Onboarding/Onboarding.Customization.Toolbar.Bottom.Action.v123
+                  image: toolbar-bottom
+                  action: toolbar-bottom
+              onboarding-type: fresh-install
+              prerequisites:
+                - ALWAYS
             update-welcome:
               card-type: basic
               order: 10
