Bugfix MTE-3146 Fix junit xml file name (#21412)
* Fix junit file name

* Don't restart simulators to save time

* Fixed combined.xml file name

* Let's run all tests

--- a/.github/workflows/firefox-ios-ui-tests.yml
+++ b/.github/workflows/firefox-ios-ui-tests.yml
@@ -168,7 +168,7 @@ jobs:
           python ../test-fixtures/ci/convert_junit_to_markdown.py --smoke --github --${{ env.browser }} ./combined.xml ./github.md
           cat github.md >> $GITHUB_STEP_SUMMARY
           python ../test-fixtures/ci/convert_junit_to_markdown.py --smoke --slack --${{ env.browser }} ./combined.xml ./slack.json
-          mv ./combined junit-smoketests-${{ matrix.ios_simulator }}-`date +"%Y-%m-%d"`.xml
+          mv ./combined.xml "junit-smoketests-${{ matrix.ios_simulator }}-`date +"%Y-%m-%d"`.xml"
         working-directory:  ${{ env.browser }}
       - name: Upload junit files
         id: upload-junit
@@ -232,8 +232,6 @@ jobs:
         - name: Run tests
           id: run-tests
           run: |
-            xcrun simctl shutdown all
-            xcrun simctl erase all
             xcrun simctl boot '${{ matrix.ios_simulator }}'
             xcodebuild \
               test-without-building \
@@ -252,7 +250,7 @@ jobs:
             python ../test-fixtures/ci/convert_junit_to_markdown.py --github --${{ env.browser }} ./build/reports/junit.xml ./github.md
             cat github.md >> $GITHUB_STEP_SUMMARY
             python ../test-fixtures/ci/convert_junit_to_markdown.py --slack --${{ env.browser }} ./build/reports/junit.xml ./slack.json
-            mv ./build/reports/junit.xml junit-fullfunctional-${{ matrix.ios_simulator }}-`date +"%Y-%m-%d"`.xml
+            mv ./build/reports/junit.xml "junit-fullfunctional-${{ matrix.ios_simulator }}-`date +"%Y-%m-%d"`.xml"
           working-directory:  ${{ env.browser }}
         - name: Upload junit files
           id: upload-junit
