Add FXIOS-9782 [Microsurvey] Turn off feature flag

--- a/firefox-ios/nimbus-features/microsurveyFeature.yaml
+++ b/firefox-ios/nimbus-features/microsurveyFeature.yaml
@@ -13,7 +13,7 @@ features:
     defaults:
       - channel: beta
         value:
-          enabled: true
+          enabled: false
       - channel: developer
         value:
           enabled: true
