--- a/firefox-ios/nimbus.fml.yaml
+++ b/firefox-ios/nimbus.fml.yaml
@@ -29,6 +29,7 @@ include:
   - nimbus-features/nativeErrorPageFeature.yaml
   - nimbus-features/nightModeFeature.yaml
   - nimbus-features/onboardingFrameworkFeature.yaml
+  - nimbus-features/passwordGeneratorFeature.yaml
   - nimbus-features/reduxSearchSettingsFeature.yaml
   - nimbus-features/remoteTabManagement.yaml
   - nimbus-features/searchFeature.yaml
