--- a/firefox-ios/nimbus-features/passwordGeneratorFeature.yaml
+++ b/firefox-ios/nimbus-features/passwordGeneratorFeature.yaml
@@ -3,15 +3,15 @@ features:
   password-generator-feature:
     description: Password Generator Feature
     variables:
-      status:
+      enabled:
         description: If true, the password generator feature is enabled
         type: Boolean
         default: false
     defaults:
       - channel: beta
         value:
-          status: false
+          enabled: false
       - channel: developer
         value:
-          status: false
+          enabled: false
 
