--- a/.github/workflows/focus-ios-ui-tests-previous-os.yml
+++ b/.github/workflows/focus-ios-ui-tests-previous-os.yml
@@ -52,10 +52,8 @@ jobs:
         id: setup-simulator
         run: |
           xcrun simctl list runtimes
-          xcrun simctl list runtimes | grep 'iOS'
-          output=$(xcrun simctl list runtimes | grep 'iOS ${{ matrix.ios_version }}')
-          echo "output: '$output'"
-          if $output then
+          output=$(xcrun simctl list runtimes | grep 'iOS ${{ matrix.ios_version }}' || true)
+          if [ -n "$output" ]; then
             echo "iOS ${{ matrix.ios_version }} simulator has already been installed"
           else
             echo "Install iOS ${{ matrix.ios_version }} runtime"
