--- a/.github/workflows/focus-ios-ui-tests.yml
+++ b/.github/workflows/focus-ios-ui-tests.yml
@@ -120,6 +120,7 @@ jobs:
               uses: slackapi/slack-github-action@v2.0.0
               with:
                 payload-file-path: ${{ env.browser }}/slack.json
+                payload-templated: true
                 webhook: ${{ secrets.WEBHOOK_SLACK_TOKEN }}
                 webhook-type: incoming-webhook
               env:
