--- a/.github/workflows/firefox-ios-update_remote_settings_data_script.yml
+++ b/.github/workflows/firefox-ios-update_remote_settings_data_script.yml
@@ -65,11 +65,12 @@ jobs:
       - name: Send Slack to notifiy if github action fails
         if: '!cancelled()'
         id: slack
-        uses: slackapi/slack-github-action@v1.26.0
+        uses: slackapi/slack-github-action@v2.0.0
         env:
           JOB_STATUS: ${{ job.status == 'success' && ':white_check_mark:' || job.status == 'failure' && ':x:' }}
           JOB_STATUS_COLOR: ${{ job.status == 'success' && '#36a64f' || job.status == 'failure' && '#FF0000' }}
-          SLACK_WEBHOOK_URL: ${{ secrets.WEBHOOK_SLACK_TOKEN }}
-          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
         with:
           payload-file-path: "./test-fixtures/ci/slack-notification-payload-remote-settings-fetch.json"
+          payload-templated: true
+          webhook: ${{ secrets.WEBHOOK_SLACK_TOKEN }}
+          webhook-type: incoming-webhook
